Basic structure of app landing page

--- a/index.html
+++ b/index.html
@@ -1,19 +1,165 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Zoak</title>
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="./assets/stylesheet/style.css"/>
+    <link rel="stylesheet" href="./assets/stylesheet/style.css" />
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" />
-    <!-- Bootstrap CSS -->
-</head>
-<body>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
     
+    <!-- landing section -->
+    <div class="landing">
+      <div class="container mx-auto">
+        <!-- navbar -->
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+          <div class="container-fluid">
+            <a class="navbar-brand" href="#">Navbar</a>
+            <button
+              class="navbar-toggler"
+              type="button"
+              data-bs-toggle="collapse"
+              data-bs-target="#navbarSupportedContent"
+              aria-controls="navbarSupportedContent"
+              aria-expanded="false"
+              aria-label="Toggle navigation"
+            >
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="#"
+                    >Home</a
+                  >
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Link</a>
+                </li>
+                <li class="nav-item dropdown">
+                  <a
+                    class="nav-link dropdown-toggle"
+                    href="#"
+                    id="navbarDropdown"
+                    role="button"
+                    data-bs-toggle="dropdown"
+                    aria-expanded="false"
+                  >
+                    Dropdown
+                  </a>
+                  <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <li><a class="dropdown-item" href="#">Action</a></li>
+                    <li>
+                      <a class="dropdown-item" href="#">Another action</a>
+                    </li>
+                    <li><hr class="dropdown-divider" /></li>
+                    <li>
+                      <a class="dropdown-item" href="#">Something else here</a>
+                    </li>
+                  </ul>
+                </li>
+                <li class="nav-item">
+                  <a
+                    class="nav-link disabled"
+                    href="#"
+                    tabindex="-1"
+                    aria-disabled="true"
+                    >Disabled</a
+                  >
+                </li>
+              </ul>
+              <form class="d-flex">
+                <input
+                  class="form-control me-2"
+                  type="search"
+                  placeholder="Search"
+                  aria-label="Search"
+                />
+                <button class="btn btn-outline-success" type="submit">
+                  Search
+                </button>
+              </form>
+            </div>
+          </div>
+        </nav>
+
+        <!-- hero section -->
+        <div
+          class="d-flex flex-col align-items-center justify-content-between flex-wrap"
+        >
+          <!-- text section -->
+          <div class="d-flex flex-column w-50">
+            <h1 class="w-50">Appointment on your schedule</h1>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius
+              repudiandae unde accusantium corporis error. Delectus ullam sequi
+              reprehenderit.
+            </p>
+            <div class="button-group">
+              <button class="btn btn-primary">Download App</button>
+              <button class="btn btn-secondary">O</button>
+              <button class="btn btn-secondary">O</button>
+            </div>
+          </div>
+          <!-- image section -->
+          <div
+            class="image-section d-flex flex-row justify-content-center mx-auto w-50"
+          >
+            <img
+              src="./assets/images/AppMockups/App1.png"
+              alt="landing phone mockup"
+              width="375"
+            />
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- features section -->
+    <div class="container mx-auto my-2">
+        <div class="d-flex flex-column align-items-center mx-auto">
+            <div class="d-flex flex-column text-center my-2">
+                <h1>Features</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, nisi quis? Esse culpa voluptatibus natus odit, officiis totam.</p>
+            </div>
+            <div class="d-flex flex-row">
+                <div class="d-flex flex-column text-center w-25 justify-content-around">
+                    <div class="feature-item">
+                        <h1>Features</h1>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, nisi quis? Esse culpa voluptatibus natus odit, officiis totam.</p>
+                    </div>
+                    <div class="feature-item">
+                        <h1>Features</h1>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, nisi quis? Esse culpa voluptatibus natus odit, officiis totam.</p>
+                    </div>
+                </div>
+                <div class="d-flex flex-column text-center w-50">
+                    <div class="feature-img">
+                        <img src="./assets/images/AppMockups/App2.png" alt="features image" width="400">
+                    </div>
+                </div>
+                <div class="d-flex flex-column text-center w-25  justify-content-around">
+                    <div class="feature-item">
+                        <h1>Features</h1>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, nisi quis? Esse culpa voluptatibus natus odit, officiis totam.</p>
+                    </div>
+                    <div class="feature-item">
+                        <h1>Features</h1>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, nisi quis? Esse culpa voluptatibus natus odit, officiis totam.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <script src="./assets/scripts/script.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.3/js/bootstrap.min.js" integrity="sha512-Hqe3s+yLpqaBbXM6VA0cnj/T56ii5YjNrMT9v+us11Q81L0wzUG0jEMNECtugqNu2Uq5MSttCg0p4KK0kCPVaQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-</body>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
+  </body>
 </html>
