--- a/about.html
+++ b/about.html
@@ -27,7 +27,6 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    s
 
     <!-- Custom CSS -->
     <link
@@ -51,7 +50,7 @@
     <!-- Hero Section -->
     <section>
       <div class="landing d-flex flex-column justify-content-center px-5">
-        <div class="container text-center px-5">
+        <div class="container text-center">
           <p class="head1">Who Are We?</p>
           <p class="subTitle1">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit ut aliquam,
@@ -82,8 +81,8 @@
           </div>
         </div>
         <div class="w-50 d-flex" id="AboutMissionMock">
-          <!-- <img src="./assets/images/AboutAppMock.png"/>
-            <img src="./assets/images/AppMockups/App1.png"/> -->
+          <img src="./assets/images/AboutAppMock.png" class="w-75"/>
+          <img src="./assets/images/AppMockups/App1.png" class="w-75"/>
         </div>
       </div>
     </section>
