modification in app showcase page

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
     </div>
 
     <!-- app showcase section -->
-    <div class="app-showcase my-3 py-3">
+    <div class="app-showcase py-3">
       <div class="container mx-auto d-flex flex-column justify-content-center align-items-center">
         <div class="showcase-text text-center py-2 my-2">
           <h1 class="head1">
@@ -155,7 +155,7 @@
     <!-- scroll showcase section -->
 
     <!-- web panel cta -->
-    <div class="cta my-3 py-3">
+    <div class="cta py-3">
       <div class="container mx-auto d-flex flex-column">
         <div class="content py-3 my-3 text-center">
           <h1 class="head2 mx-auto">
