--- a/about.html
+++ b/about.html
@@ -10,15 +10,7 @@
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
-      integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
-      crossorigin="anonymous"
     />
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
-      crossorigin="anonymous"
-    ></script>
-
     <!-- Font Awesome -->
     <link
       rel="stylesheet"
@@ -64,10 +56,11 @@
     <!-- Hero Section -->
 
     <!-- Mission Section -->
-    <section id="Mission" class="bg-dark">
-      <div class="d-flex align-items-center full-screen px-5">
-        <div class="container me-auto">
+    <section id="Mission" class="bg-dark full-screen">
+      <div class="d-flex align-items-center px-5 justify-content-start w-100">
+        <div class="container w-50">
           <div>
+            <i class="fa-solid fa-bullseye-arrow icon-bg"></i>
             <p class="head1">Our Mission</p>
             <p class="subTitle1">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit ut
@@ -80,31 +73,94 @@
             </ul>
           </div>
         </div>
-        <div class="w-50 d-flex" id="AboutMissionMock">
-          <img src="./assets/images/AboutAppMock.png" class="w-75"/>
-          <img src="./assets/images/AppMockups/App1.png" class="w-75"/>
+        <div class="py-5 align-items-center d-flex position-relative">
+          <div id="AboutMissionMockText"></div>
+          <img
+            src="./assets/images/AboutAppMockup.png"
+            id="AboutMissionMockImg"
+            className="my-auto"
+          />
         </div>
       </div>
     </section>
     <!-- Mission Section -->
 
     <!-- Vision Section -->
-    <section id="Vision" class="bg-dark">
-      <div class="d-flex align-items-center full-screen px-5">
-        <div class="w-100" id="AboutMissionMock">
-          <img src="./assets/images/WebMockups/Staff.png" class="w-50" />
+    <section id="Vision" class="bg-dark full-screen">
+      <div class="d-flex align-items-center px-5 justify-content-start w-100">
+        <div class="py-5 align-items-center d-flex position-relative">
+          <div id="AboutVisionMockText"></div>
+          <img
+            src="./assets/images/WebMockups/Staff.png"
+            id="AboutVisionMockImg"
+            className="my-auto"
+          />
         </div>
-        <div class="container py-5">
+        <div class="container w-50">
           <div>
+            <i class="fa-solid fa-bullseye-arrow icon-bg"></i>
             <p class="head1">Our Vision</p>
             <p class="subTitle1">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit ut
               aliquam, purus sit amet luctus venenatis, lectus
             </p>
+            <ul>
+              <li>Lorem ipsum dolor sit amet</li>
+              <li>Lorem ipsum dolor sit amet</li>
+              <li>Lorem ipsum dolor sit amet</li>
+            </ul>
           </div>
         </div>
       </div>
     </section>
     <!-- Vision Section -->
+
+    <!-- CTA Section -->
+    <div class="w-full py-5" id="AboutCTA">
+      <div class="container d-flex py-5 align-items-center justify-content-between w-100">
+        <div>
+          <p class="head1">Meet Our Team</p>
+          <p class="subTitle1">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit ut aliquam,
+            purus sit
+          </p>
+        </div>
+        <div class="ml-auto">
+          <i class="fa-solid fa-angle-right icon-bg p-4"></i>
+        </div>
+      </div>
+    </div>
+    <!-- CTA Section -->
+
+    <!-- Footer -->
+    <footer class="text-center">
+      <div>
+
+      </div>
+      <div class="d-flex" id="footerLink">
+        <ul>
+          <li>App</li>
+          <li>Web</li>
+          <li>Services</li>
+          <li>About</li>
+          <li>Team</li>
+          <li>Contact</li>
+        </ul>
+      </div>
+      <div class="d-flex" id="socialLinks">
+
+      </div>
+      <div>
+        Zoak - @theasperteam
+      </div>
+    </footer>
+    <!-- Footer -->
+
+    <!-- Font Awesome -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
