--- a/index.html
+++ b/index.html
@@ -13,9 +13,18 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.0.7/dist/css/splide.min.css"
+    />
+
+    <!-- font awesome -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css"
+    />
   </head>
   <body>
-    
     <!-- landing section -->
     <div class="landing">
       <div class="container mx-auto">
@@ -50,9 +59,7 @@
                 </li>
               </ul>
               <form class="d-flex">
-                <button class="button2 me-2" type="submit">
-                  Contact us
-                </button>
+                <button class="button2 me-2" type="submit">Contact us</button>
               </form>
             </div>
           </div>
@@ -60,118 +67,298 @@
 
         <!-- hero section -->
         <div
-          class="d-flex flex-row align-items-center justify-content-between flex-wrap"
+          class="d-flex flex-row align-items-center justify-content-between mx-auto mt-lg-5 flex-wrap"
         >
           <!-- text section -->
-          <div class="landing-text d-flex flex-column justify-content-center mx-auto">
+          <div
+            class="landing-text d-flex flex-column justify-content-center mx-auto"
+          >
             <h1 class="head1">Appointment on your schedule</h1>
             <p class="para1 w-75">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut exercitationem atque consequuntur!
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut
+              exercitationem atque consequuntur!
             </p>
-            <div class="button-group my-1">
+            <div class="button-group my-1 d-flex align-items-center">
               <button class="button1">Download App</button>
-              <!-- <button class="btn btn-secondary">O</button> -->
-              <!-- <button class="btn btn-secondary">O</button> -->
+              <i class="text-white fs-2 mx-3 fa-brands fa-apple"></i>
             </div>
           </div>
 
           <!-- image section -->
-          <div
-            class="landing-image mx-auto"
-          >
+          <div class="landing-image mx-auto">
             <img
               src="./assets/images/AppMockups/App1.png"
               alt="landing phone mockup"
-              class="landing-app"
+              width="300"
             />
-            <!-- <div class="text-blob-1">
-              Lorem, ipsum dolor.
-            </div>
-            <div class="text-blob-2">
-              Lorem, ipsum.
-            </div>
-            <div class="img-blob">
-              <img src="./assets/images/General/Bg.jpg" alt="avatar">
-            </div> -->
           </div>
         </div>
       </div>
     </div>
 
     <!-- features section -->
-    <div class="container mx-auto my-3 py-3">
-        <div class="d-flex flex-column align-items-center mx-auto">
-            <div class="d-flex flex-column text-center my-2">
-                <h1 class="head1">Features</h1>
-                <p class="para1 w-75 mx-auto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, nisi quis? Esse culpa voluptatibus natus odit, officiis totam.</p>
-            </div>
-            <div class="d-flex flex-row">
-                <div class="feature-text-1 d-flex flex-column text-center justify-content-around">
-                    <div class="feature-item text-end">
-                        <h1 class="head2">Features</h1>
-                        <p class="para2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, nisi quis? Esse culpa voluptatibus natus odit, officiis totam.</p>
-                    </div>
-                    <div class="feature-item text-end">
-                        <h1 class="head2">Features</h1>
-                        <p class="para2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, nisi quis? Esse culpa voluptatibus natus odit, officiis totam.</p>
-                    </div>
-                </div>
-                <div class="feature-image d-flex flex-column justify-content-center">
-                    <div class="feature-img mx-auto">
-                        <img src="./assets/images/AppMockups/App3.png" alt="features image" width="400">
-                    </div>
-                </div>
-                <div class="feature-text-2 d-flex flex-column text-center justify-content-around">
-                    <div class="feature-item text-start">
-                        <h1 class="head2">Features</h1>
-                        <p class="para2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, nisi quis? Esse culpa voluptatibus natus odit, officiis totam.</p>
-                    </div>
-                    <div class="feature-item text-start">
-                        <h1 class="head2">Features</h1>
-                        <p class="para2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, nisi quis? Esse culpa voluptatibus natus odit, officiis totam.</p>
-                    </div>
-                </div>
-            </div>
+    <div
+      class="features container mx-auto py-5 d-flex flex-column align-items-center mx-auto flex-wrap"
+    >
+      <div class="d-flex flex-column text-center my-2">
+        <h1 class="head1">Features</h1>
+        <p class="para1 w-75 mx-auto">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, nisi
+          quis? Esse culpa voluptatibus natus odit, officiis totam.
+        </p>
+      </div>
+      <div class="d-flex flex-row">
+        <div
+          class="feature-text-1 d-flex flex-column text-center justify-content-around"
+        >
+          <div class="feature-item text-end p-3">
+            <h1 class="head2">Features</h1>
+            <p class="para2">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, nisi
+              quis? Esse culpa voluptatibus natus odit, officiis totam.
+            </p>
+          </div>
+          <div class="feature-item text-end p-3">
+            <h1 class="head2">Features</h1>
+            <p class="para2">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, nisi
+              quis? Esse culpa voluptatibus natus odit, officiis totam.
+            </p>
+          </div>
         </div>
+        <div class="feature-image d-flex">
+          <div class="blob">
+            <img
+              src="./assets/images/AppMockups/App3.png"
+              alt="features image"
+            />
+          </div>
+        </div>
+        <div
+          class="feature-text-2 d-flex flex-column text-center justify-content-around"
+        >
+          <div class="feature-item text-start p-3">
+            <h1 class="head2">Features</h1>
+            <p class="para2">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, nisi
+              quis? Esse culpa voluptatibus natus odit, officiis totam.
+            </p>
+          </div>
+          <div class="feature-item text-start p-3">
+            <h1 class="head2">Features</h1>
+            <p class="para2">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, nisi
+              quis? Esse culpa voluptatibus natus odit, officiis totam.
+            </p>
+          </div>
+        </div>
+      </div>
     </div>
 
     <!-- app showcase section -->
+
     <div class="app-showcase py-3">
-      <div class="container mx-auto d-flex flex-column justify-content-center align-items-center">
+      <div
+        class="container mx-auto d-flex flex-column justify-content-center align-items-center"
+      >
         <div class="showcase-text text-center py-2 my-2">
-          <h1 class="head1">
-            Experience the App
-          </h1>
+          <h1 class="head1">Experience the App</h1>
           <p class="para1 w-75 mx-auto">
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quisquam, cumque. Architecto, consequatur?
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quisquam,
+            cumque. Architecto, consequatur?
           </p>
         </div>
-        <div class="showcase my-3">
-          <img class="showcase-img" src="./assets/images/AppMockups/MultiScreen.png" alt="showcase-img" width="900">
+        <div class="showcase">
+          <img
+            class="showcase-img"
+            src="./assets/images/AppMockups/MultiScreen.png"
+            alt="showcase-img"
+          />
         </div>
       </div>
     </div>
 
     <!-- scroll showcase section -->
 
+    <div
+      class="container scroll-showcase py-5 d-flex flex-row align-items-center justify-content-center mx-auto"
+    >
+      <section
+        class="splide container d-flex align-items-center justify-content-center m-auto"
+      >
+        <div class="splide__track">
+          <ul class="splide__list">
+            <li class="splide__slide">
+              <div
+                class="showcase-1 d-flex flex-row align-items-start justify-content-center"
+              >
+                <div class="text" id="text-1">
+                  <h1 class="head1">Appointment on your schedule</h1>
+                  <p class="para1 w-75">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    Aut exercitationem atque consequuntur!
+                  </p>
+                  <ul class="para2">
+                    <li><i class="fa-solid fa-user"></i>Lorem, ipsum dolor.</li>
+                    <li>
+                      <i class="fa-solid fa-shield-halved"></i>Lorem ipsum dolor
+                      sit.
+                    </li>
+                    <li>
+                      <i class="fa-solid fa-mobile-screen-button"></i>Lorem,
+                      ipsum dolor.
+                    </li>
+                  </ul>
+                </div>
+
+                <div
+                  class="image d-flex flex-row align-content-center justify-content-center"
+                >
+                  <img
+                    src="./assets/images/AppMockups/App4.png"
+                    alt="app mockup"
+                    width="300"
+                  />
+                </div>
+              </div>
+            </li>
+
+            <li class="splide__slide">
+              <div
+                class="showcase-2 d-flex flex-row align-items-start justify-content-center"
+              >
+                <div class="text-1 text-start">
+                  <h1 class="head2">Appointment on your schedule</h1>
+                  <ul class="para2">
+                    <li><i class="fa-solid fa-user"></i>Lorem, ipsum dolor.</li>
+                    <li>
+                      <i class="fa-solid fa-shield-halved"></i>Lorem ipsum dolor
+                      sit.
+                    </li>
+                    <li>
+                      <i class="fa-solid fa-mobile-screen-button"></i>Lorem,
+                      ipsum dolor.
+                    </li>
+                  </ul>
+                </div>
+
+                <div
+                  class="image d-flex flex-row align-content-center justify-content-center"
+                >
+                  <img
+                    src="./assets/images/AppMockups/App4.png"
+                    alt="app mockup"
+                    width="300"
+                  />
+                </div>
+
+                <div class="text-2 text-end align-self-end">
+                  <h1 class="head2">Appointment on your schedule</h1>
+                  <ul class="para2">
+                    <li><i class="fa-solid fa-user"></i>Lorem, ipsum dolor.</li>
+                    <li>
+                      <i class="fa-solid fa-shield-halved"></i>Lorem ipsum dolor
+                      sit.
+                    </li>
+                    <li>
+                      <i class="fa-solid fa-mobile-screen-button"></i>Lorem,
+                      ipsum dolor.
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </li>
+
+            <li class="splide__slide">
+              <div
+                class="showcase-3 d-flex flex-row-reverse align-items-end justify-content-center"
+              >
+                <div class="text">
+                  <h1 class="head1">Appointment on your schedule</h1>
+                  <p class="para1 w-75">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    Aut exercitationem atque consequuntur!
+                  </p>
+                  <ul class="para2">
+                    <li><i class="fa-solid fa-user"></i>Lorem, ipsum dolor.</li>
+                    <li>
+                      <i class="fa-solid fa-shield-halved"></i>Lorem ipsum dolor
+                      sit.
+                    </li>
+                    <li>
+                      <i class="fa-solid fa-mobile-screen-button"></i>Lorem,
+                      ipsum dolor.
+                    </li>
+                  </ul>
+                </div>
+
+                <div
+                  class="image d-flex flex-row align-content-center justify-content-center"
+                >
+                  <img
+                    src="./assets/images/AppMockups/App4.png"
+                    alt="app mockup"
+                    width="300"
+                  />
+                </div>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </section>
+    </div>
+
     <!-- web panel cta -->
-    <div class="cta py-3">
+
+    <div class="cta py-5">
       <div class="container mx-auto d-flex flex-column">
         <div class="content py-3 my-3 text-center">
           <h1 class="head2 mx-auto">
             Want Your Services Availed At One Click?
           </h1>
-          <p class="para1 w-50 mx-auto">
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nihil molestiae explicabo, ut ex assumenda asperiores officia veniam dolor.
+          <p class="para1 mx-auto">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nihil
+            molestiae explicabo, ut ex assumenda asperiores officia veniam
+            dolor.
           </p>
-          <button class="button1">
-            Explore
-          </button>
+          <button class="button1">Explore</button>
         </div>
       </div>
     </div>
 
-    <script src="./assets/scripts/script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
+
+    <script src="./assets/scripts/script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.0.6/dist/js/splide.min.js"></script>
+    <script>
+      document.addEventListener("DOMContentLoaded", function () {
+        new Splide(".splide", {
+          perPage: 1,
+          pagination: false,
+          wheel: true,
+          focus: "center",
+          height: "80vh",
+          arrows: false,
+          waitForTransition: true,
+          wheelSleep: 2,
+          releaseWheel: true,
+          wheelMinThreshold: 3,
+          // breakpoints: {
+          //   400: {
+          //     perPage: 1,
+          //   },
+          //   640: {
+          //     perPage: 1,
+          //   },
+          //   960: {
+          //     perPage: 1,
+          //   },
+          //   1440: {
+          //     perPage: 1,
+          //   },
+          // },
+        }).mount();
+      });
+    </script>
   </body>
 </html>
