--- a/team.html
+++ b/team.html
@@ -24,7 +24,7 @@
     <!-- navbar  -->
     <nav class="navbar container navbar-expand-lg navbar-dark bg-transparent">
       <div class="container-fluid">
-        <a class="navbar-brand fw-bold" href="#">Zoak</a>
+        <a class="navbar-brand fw-bold" href="index.html">Zoak</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -39,7 +39,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
             <li class="nav-item me-2">
-              <a class="nav-link active" href="#">Our App</a>
+              <a class="nav-link active" href="index.html">Our App</a>
             </li>
             <li class="nav-item me-2">
               <a class="nav-link" href="./webShow.html">Web Panel</a>
