--- a/webShow.html
+++ b/webShow.html
@@ -4,76 +4,385 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Web Showcase | Zoak</title>
-
-    <!-- Bootstrap -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
-      crossorigin="anonymous"
-    />
-
+    <title>Zoak</title>
     <!-- Custom CSS -->
+    <link rel="stylesheet" href="./assets/stylesheet/utilities.css" />
+    <link rel="stylesheet" href="./assets/stylesheet/style.css" />
+    <!-- Bootstrap CSS -->
     <link
-      href="./assets/stylesheet/style.css"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
-      type="text/css"
     />
     <link
-      href="./assets/stylesheet/utilities.css"
       rel="stylesheet"
-      type="text/css"
+      href="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.0.7/dist/css/splide.min.css"
     />
+
+    <!-- font awesome -->
     <link
-      href="./assets/stylesheet/webShow.css"
       rel="stylesheet"
-      type="text/css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css"
     />
   </head>
   <body>
-    <!-- Hero Section -->
-    <section>
-      <div class="landing text-white text-center pt-5">
-        <div class="container pt-5 mt-5">
-          <!-- Hero Text -->
-          <p class="head1 fw-bold text-capitalize">
-            Get your services available<br />
-            on one click
-          </p>
-          <p class="subTitle1 my-2">
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Est,
-            praesentium.
-          </p>
-          <!-- Hero Text -->
-          <img
-            src="./assets/images/WebHeroPanel.png"
-            alt="Web Hero Panel"
-            class="webHeroImg"
-          />
-          <!-- Elements -->
-          <img src="./assets/images/Elements/Dots.png" alt="dotElement" class="webDotEl"/>
-          <!-- Elements -->
-        </div>
-    </div>
-</section>
-    <!-- Hero Section -->
+    <!-- landing section -->
+    <div class="landing">
+      <div class="container mx-auto">
+        <!-- navbar -->
+        <nav class="navbar navbar-expand-lg navbar-dark bg-transparent">
+          <div class="container-fluid">
+            <a class="navbar-brand fw-bold" href="index.html">Zoak</a>
+            <button
+              class="navbar-toggler"
+              type="button"
+              data-bs-toggle="collapse"
+              data-bs-target="#navbarSupportedContent"
+              aria-controls="navbarSupportedContent"
+              aria-expanded="false"
+              aria-label="Toggle navigation"
+            >
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
+                <li class="nav-item me-2">
+                  <a class="nav-link" href="index.html">Our App</a>
+                </li>
+                <li class="nav-item me-2">
+                  <a class="nav-link active" href="./webShow.html">Web Panel</a>
+                </li>
+                <li class="nav-item me-2">
+                  <a class="nav-link" href="./about.html">About</a>
+                </li>
+                <li class="nav-item me-2">
+                  <a class="nav-link" href="./team.html">Team</a>
+                </li>
+              </ul>
+              <form class="d-flex">
+                <button class="button2 me-2" type="submit">Contact us</button>
+              </form>
+            </div>
+          </div>
+        </nav>
 
-    <!-- Features Section -->
-    <section>
-      <div class="webFeatures">
-        <div class="text-center text-white container">
-          <p class="head1">Lorem Ispum</p>
-          <p class="subTitle1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa maxime aut qui quo consequatur at.</p>
+        <!-- hero section -->
+        <div
+          class="d-flex flex-row align-items-center justify-content-between mx-auto mt-lg-5 flex-wrap"
+          id="landingDiv"
+        >
+          <!-- text section -->
+          <div
+            class="landing-text d-flex flex-column justify-content-center mx-auto"
+          >
+            <h1 class="head1">Appointment on your schedule</h1>
+            <p class="para1 w-75">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut
+              exercitationem atque consequuntur!
+            </p>
+            <div class="button-group my-1 d-flex align-items-center">
+              <button class="button1">Download App</button>
+              <i class="text-white fs-2 mx-3 fa-brands fa-apple"></i>
+            </div>
+          </div>
+
+          <!-- image section -->
+          <div class="landing-image mx-auto">
+            <img
+              src="./assets/images/WebMockups/Appoinments.png"
+              alt="landing phone mockup"
+              width="300"
+            />
+          </div>
         </div>
       </div>
-    </section>
-    <!-- Features Section -->
+    </div>
 
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
-      crossorigin="anonymous"
-    ></script>
+    <!-- features section -->
+    <div
+      class="features container mx-auto py-5 d-flex flex-column align-items-center mx-auto flex-wrap"
+    >
+      <div class="d-flex flex-column text-center my-2">
+        <h1 class="head1">Features</h1>
+        <p class="para1 w-75 mx-auto">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, nisi
+          quis? Esse culpa voluptatibus natus odit, officiis totam.
+        </p>
+      </div>
+      <div class="d-flex flex-row">
+        <div
+          class="feature-text d-flex flex-column  justify-content-around w-50"
+        >
+          <div class="feature-item p-1">
+            <h1 class="head2">Book Appointments</h1>
+            <p class="para2">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, nisi
+              quis? Esse culpa voluptatibus natus odit, officiis totam.
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, nisi
+              quis? Esse culpa voluptatibus natus odit, officiis totam.
+            </p>
+          </div>
+          <div class="feature-item p-1">
+            <h1 class="head2">Book Appointments</h1>
+            <p class="para2">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, nisi
+              quis? Esse culpa voluptatibus natus odit, officiis totam.
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, nisi
+              quis? Esse culpa voluptatibus natus odit, officiis totam.
+            </p>
+          </div>
+        </div>
+        <div class="feature-image d-flex ">
+          <div class="blob">
+            <img
+              src="./assets/images/WebMockups/Vendor profile.png"
+              alt="features image"
+            />
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- app showcase section -->
+
+    <div class="app-showcase py-3">
+      <div
+        class="container mx-auto d-flex flex-column justify-content-center align-items-center"
+      >
+        <div class="showcase-text text-center py-2 my-2">
+          <h1 class="head1">Experience the Web</h1>
+          <p class="para1 w-75 mx-auto">
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quisquam,
+            cumque. Architecto, consequatur?
+          </p>
+        </div>
+        <div class="web-showcase">
+          <img
+            class="showcase-img"
+            src="./assets/images/WebMockups/Screen2.png"
+            alt="showcase-img"
+          />
+        </div>
+      </div>
+    </div>
+
+    <!-- scroll showcase section -->
+
+    <div
+      class="container scroll-showcase py-5 d-flex flex-row align-items-center justify-content-center mx-auto"
+    >
+      <section
+        class="splide container d-flex align-items-center justify-content-center m-auto"
+      >
+        <div class="splide__track">
+          <ul class="splide__list">
+            <li class="splide__slide">
+              <div
+                class="showcase-1 d-flex flex-row align-items-middle justify-content-center"
+              >
+                <div class="text w-1/2" id="text-1">
+                  <h1 class="head1">Appointment on your schedule</h1>
+                  <p class="para1 w-75">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    Aut exercitationem atque consequuntur!
+                  </p>
+                  <ul class="para2">
+                    <li><i class="fa-solid fa-user"></i>Lorem, ipsum dolor.</li>
+                    <li>
+                      <i class="fa-solid fa-shield-halved"></i>Lorem ipsum dolor
+                      sit.
+                    </li>
+                    <li>
+                      <i class="fa-solid fa-mobile-screen-button"></i>Lorem,
+                      ipsum dolor.
+                    </li>
+                  </ul>
+                </div>
+
+                <div
+                  class="image d-flex flex-row align-content-center justify-content-center"
+                >
+                  <img
+                    src="./assets/images/WebMockups/Calendar.png"
+                    alt="app mockup"
+                    class="my-auto w-100 p-2"
+                  />
+                </div>
+              </div>
+            </li>
+
+            <li class="splide__slide">
+              <div
+                class="showcase-2 d-flex flex-row align-items-start justify-content-center"
+              >
+                <div class="text-1 text-start">
+                  <h1 class="head2">Appointment on your schedule</h1>
+                  <ul class="para2">
+                    <li><i class="fa-solid fa-user"></i>Lorem, ipsum dolor.</li>
+                    <li>
+                      <i class="fa-solid fa-shield-halved"></i>Lorem ipsum dolor
+                      sit.
+                    </li>
+                    <li>
+                      <i class="fa-solid fa-mobile-screen-button"></i>Lorem,
+                      ipsum dolor.
+                    </li>
+                  </ul>
+                </div>
+
+                <div
+                  class="image d-flex flex-row align-content-center justify-content-center"
+                >
+                  <img
+                    src="./assets/images/WebMockups/Services management.png"
+                    alt="app mockup"
+                    class="w-100 p-2"
+                  />
+                </div>
+
+                <div class="text-2 text-end align-self-end">
+                  <h1 class="head2">Appointment on your schedule</h1>
+                  <ul class="para2">
+                    <li><i class="fa-solid fa-user"></i>Lorem, ipsum dolor.</li>
+                    <li>
+                      <i class="fa-solid fa-shield-halved"></i>Lorem ipsum dolor
+                      sit.
+                    </li>
+                    <li>
+                      <i class="fa-solid fa-mobile-screen-button"></i>Lorem,
+                      ipsum dolor.
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </li>
+
+            <li class="splide__slide">
+              <div
+                class="showcase-3 d-flex flex-row-reverse align-items-end justify-content-center"
+              >
+                <div class="text">
+                  <h1 class="head1">Appointment on your schedule</h1>
+                  <p class="para1 w-75">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    Aut exercitationem atque consequuntur!
+                  </p>
+                  <ul class="para2">
+                    <li><i class="fa-solid fa-user"></i>Lorem, ipsum dolor.</li>
+                    <li>
+                      <i class="fa-solid fa-shield-halved"></i>Lorem ipsum dolor
+                      sit.
+                    </li>
+                    <li>
+                      <i class="fa-solid fa-mobile-screen-button"></i>Lorem,
+                      ipsum dolor.
+                    </li>
+                  </ul>
+                </div>
+
+                <div
+                  class="image d-flex flex-row align-content-center justify-content-center"
+                >
+                  <img
+                    src="./assets/images/WebMockups/Staffs management.png"
+                    alt="app mockup"
+                    class="w-100 p-3"
+                  />
+                </div>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </section>
+    </div>
+
+    <!-- web panel cta -->
+
+    <div class="cta py-5">
+      <div class="container mx-auto d-flex flex-column">
+        <div class="content py-3 my-3 text-center">
+          <h1 class="head2 mx-auto">
+            Want To Get Services At One Click ?
+          </h1>
+          <p class="para1 mx-auto">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nihil
+            molestiae explicabo, ut ex assumenda asperiores officia veniam
+            dolor.
+          </p>
+          <button class="button1">Explore</button>
+        </div>
+      </div>
+          <!-- Footer -->
+    <footer class="text-center py-5">
+      <div>
+        <a class="mx-auto fw-bold text-white fs-3" href="index.html">Zoak</a>
+      </div>
+      <div class="d-flex pt-3 justify-content-center flex-wrap" id="footerLink">
+        <ul class="text-center justify-content-center">
+          <li><a href="index.html">Our App</a></li>
+          <li><a href="webShow.html">Web Panel</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="team.html">Team</a></li>
+        </ul>
+      </div>
+      <div class="d-flex flex-wrap justify-content-center py-3" id="footerContact">
+        <div class="mx-4">
+          <a><div><i class="fa-solid me-2 my-2 fa-envelope text-white"></i>test@email.com</div></a>
+        </div>
+        <div class="mx-4">
+          <div><i class="fa-solid me-2 my-2 fa-phone text-white"></i>+91 93024524XXX</div>
+        </div>
+        <div class="mx-4">
+          <div><i class="fa-solid me-2 m-2 fa-location-dot text-white"></i>Ireland</div>
+        </div>
+      </div>
+      <div class="d-flex flex-wrap justify-content-center">
+      <ul id="socialLinks">
+        <li><a href=""><i class="fa-brands fa-twitter fs-4 socialLinks"></i></a></li>
+        <li><a href=""><i class="fa-brands fa-linkedin fs-4 socialLinks"></i></a></li>
+        <li><a href=""><i class="fa-brands fa-instagram fs-4 socialLinks"></i></a></li>
+      </ul>       
+      </div>
+      <div>
+    @theasperteam
+      </div>
+    </footer>
+    <!-- Footer -->
+
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
+
+    <script src="./assets/scripts/script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.0.6/dist/js/splide.min.js"></script>
+    <script>
+      document.addEventListener("DOMContentLoaded", function () {
+        new Splide(".splide", {
+          perPage: 1,
+          pagination: false,
+          wheel: true,
+          focus: "center",
+          height: "80vh",
+          arrows: false,
+          waitForTransition: true,
+          wheelSleep: 2,
+          releaseWheel: true,
+          wheelMinThreshold: 3,
+          // breakpoints: {
+          //   400: {
+          //     perPage: 1,
+          //   },
+          //   640: {
+          //     perPage: 1,
+          //   },
+          //   960: {
+          //     perPage: 1,
+          //   },
+          //   1440: {
+          //     perPage: 1,
+          //   },
+          // },
+        }).mount();
+      });
+    </script>
   </body>
 </html>
